--- a/src/main/resources/templates/admin/layouts/footer.html
+++ b/src/main/resources/templates/admin/layouts/footer.html
@@ -5,10 +5,10 @@
 		    <div class="container-fluid">
 		        <div class="row">
 		            <div class="col-sm-6">
-		                <p>Thesis</p>
+		                <p>Daotao</p>
 		            </div>
 		            <div class="col-sm-6 text-right">
-		                <p>Developer <a href="https://bootstrapious.com/p/admin-template" class="external">Nguyễn Ngọc Trung</a></p>
+		                <p>Developer <a href="https://bootstrapious.com/p/admin-template" class="external">Group 4</a></p>
 		            </div>
 		        </div>
 		    </div>
