--- a/src/main/resources/templates/client/layouts/footer.html
+++ b/src/main/resources/templates/client/layouts/footer.html
@@ -24,7 +24,7 @@
 									</div>
 									<div class="footer_social">
 										<ul>
-											<li><a th:href="@{https://www.facebook.com/trungnn1606}" target=”_blank” ><i class="fa fa-facebook"
+											<li><a th:href="@{https://www.facebook.com/vu.nguyenquang.50}" target=”_blank” ><i class="fa fa-facebook"
 													aria-hidden="true"></i></a></li>
 											<li><a th:href="@{https://www.instagram.com/nt_special_/}" target=”_blank” ><i class="fa fa-instagram"
 													aria-hidden="true"></i></a></li>
